--- a/helm/charts/determined/values.yaml
+++ b/helm/charts/determined/values.yaml
@@ -359,7 +359,7 @@ resourcePools:
 #       type: kubernetes
 #       max_slots_per_pod: 1
 #       name: carolina-multirm-1
-#       namespace: default
+#       default_namespace: default
 #       kubeconfig_secret_name: additionalrm
 #       kubeconfig_secret_value: config
 #       determined_master_ip: 10.11.12.13
@@ -373,3 +373,6 @@ resourcePools:
   # logRetentionDays: 7
   # Schedule for cleaning up logs. This also accepts a cron expression. For example to run retention every Sunday at 2 am, use "0 2 * * 0"
   # schedule: "24h"
+
+# The default namespace to be referenced by each resource manager.
+# defaultNamespace:
