--- a/schemas/test_cases/v0/experiment.yaml
+++ b/schemas/test_cases/v0/experiment.yaml
@@ -47,8 +47,8 @@
       environment_variables: {}
       force_pull_image: false
       image:
-        cpu: determinedai/pytorch-ngc-dev:f20b027
-        cuda: determinedai/pytorch-ngc-dev:f20b027
+        cpu: determinedai/pytorch-ngc:0.35.0
+        cuda: determinedai/pytorch-ngc:0.35.0
         rocm: determinedai/environments:rocm-5.0-pytorch-1.10-tf-2.7-rocm-622d512
       pod_spec: null
       ports:
