--- a/webui/react/src/fixtures/responses/trial-details/old-trial-config-noop-adaptive.json
+++ b/webui/react/src/fixtures/responses/trial-details/old-trial-config-noop-adaptive.json
@@ -30,8 +30,8 @@
   "name": "noop_adaptive",
   "environment": {
     "image": {
-      "cpu": "determinedai/pytorch-ngc-dev:f20b027",
-      "gpu": "determinedai/pytorch-ngc-dev:f20b027"
+      "cpu": "determinedai/pytorch-ngc:0.35.0",
+      "gpu": "determinedai/pytorch-ngc:0.35.0"
     },
     "ports": null,
     "force_pull_image": false,
