--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,6 @@
 pillow
 rstfmt==0.0.14
-sphinx==4.2.0
+sphinx==5.3.0
 
 # Plugins
 sphinx-reredirects>=0.0.1
@@ -32,3 +32,4 @@ tensorflow==2.12.0; sys_platform != 'darwin' or platform_machine != 'arm64'
 tensorflow-macos==2.11.0; sys_platform == 'darwin' and platform_machine == 'arm64'
 torch==1.11.0
 torchvision==0.12.0
+numpy<2
