Revert "chore: 0.35.0 images (#9732)"
This reverts commit 40e1f56da02b1f6363ce17173c612138dbec500b.

--- a/examples/computer_vision/iris_tf_keras/iris_tf_keras_cancelable.yaml
+++ b/examples/computer_vision/iris_tf_keras/iris_tf_keras_cancelable.yaml
@@ -4,8 +4,8 @@ data:
   test_url: http://download.tensorflow.org/data/iris_test.csv
 environment:
   image:
-    cpu: determinedai/tensorflow-ngc:0.35.0
-    gpu: determinedai/tensorflow-ngc:0.35.0
+    cpu: determinedai/tensorflow-ngc-dev:f20b027
+    gpu: determinedai/tensorflow-ngc-dev:f20b027
 resources:
   slots_per_trial: 8
   resource_pool: defq_GPU_cancelable
