--- a/.circleci/scripts/pull_image_daemonset.yaml
+++ b/.circleci/scripts/pull_image_daemonset.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: pull-docker-daemonset
-          image: determinedai/pytorch-ngc:0.35.0
+          image: determinedai/pytorch-ngc-dev:f20b027
           command: ["/bin/bash"]
           args: ["echo", "test"]
           resources:
