--- a/examples/deepspeed_autotune/torchvision/core_api/deepspeed.yaml
+++ b/examples/deepspeed_autotune/torchvision/core_api/deepspeed.yaml
@@ -2,7 +2,7 @@ name: torchvision dsat core_api
 max_restarts: 0
 environment:
   image:
-    gpu: determinedai/pytorch-ngc:0.35.0
+    gpu: determinedai/pytorch-ngc-dev:f20b027
 resources:
   slots_per_trial: 2
   shm_size: 4294967296 # 4 GiB.
