--- a/examples/computer_vision/iris_tf_keras/adaptive.yaml
+++ b/examples/computer_vision/iris_tf_keras/adaptive.yaml
@@ -4,8 +4,8 @@ data:
   test_url: http://download.tensorflow.org/data/iris_test.csv
 environment:
   image:
-    cpu: determinedai/tensorflow-ngc-dev:5432424
-    gpu: determinedai/tensorflow-ngc-dev:5432424
+    cpu: determinedai/tensorflow-ngc:0.35.0
+    gpu: determinedai/tensorflow-ngc:0.35.0
 hyperparameters:
   learning_rate:
     type: log
