--- a/examples/hf_trainer_api/hf_image_classification/deepspeed.yaml
+++ b/examples/hf_trainer_api/hf_image_classification/deepspeed.yaml
@@ -6,7 +6,7 @@ environment:
     # You may need to modify this to match your network configuration.
     - NCCL_SOCKET_IFNAME=ens,eth,ib
   image:
-    gpu: determinedai/pytorch-ngc-dev:5432424
+    gpu: determinedai/pytorch-ngc:0.35.0
 resources:
   slots_per_trial: 2
 searcher:
