--- a/helm/charts/determined/values.yaml
+++ b/helm/charts/determined/values.yaml
@@ -31,8 +31,8 @@ defaultImages:
   kubeSchedulerPreemption: "determinedai/kube-scheduler:0.17.0"
 
   # default images for CPU and GPU environments
-  cpuImage: "determinedai/pytorch-ngc-dev:5432424"
-  gpuImage: "determinedai/pytorch-ngc-dev:5432424"
+  cpuImage: "determinedai/pytorch-ngc:0.35.0"
+  gpuImage: "determinedai/pytorch-ngc:0.35.0"
 
 # Install Determined enterprise edition.
 enterpriseEdition: false
