--- a/helm/charts/determined/templates/scheduler-deployment.yaml
+++ b/helm/charts/determined/templates/scheduler-deployment.yaml
@@ -1,7 +1,6 @@
 {{- if .Values.defaultScheduler}}
 {{- $schedulerType := .Values.defaultScheduler | trim}}
-{{- if or (eq $schedulerType "coscheduler") (eq $schedulerType "preemption")}}
-apiVersion: apps/v1
+{{- if (eq $schedulerType "coscheduler") }}apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
@@ -31,11 +30,7 @@ spec:
         - --scheduler-name=coscheduler
         - --config=/etc/config/config.yaml
         name: {{ $schedulerType }}
-        {{- if eq $schedulerType "preemption"}}
-        image: "{{ .Values.defaultImages.kubeSchedulerPreemption }}"
-        {{- else }}
         image: "{{ .Values.defaultImages.kubeScheduler }}"
-        {{- end}}
         imagePullPolicy: "Always"
         livenessProbe:
           httpGet:
