--- a/helm/charts/determined/templates/scheduler-config.yaml
+++ b/helm/charts/determined/templates/scheduler-config.yaml
@@ -1,6 +1,5 @@
 {{- if .Values.defaultScheduler}}
-{{- $schedulerType := .Values.defaultScheduler | trim}}
-{{- if or (eq $schedulerType "coscheduler") (eq $schedulerType "preemption")}}
+{{- if eq (.Values.defaultScheduler | trim ) "coscheduler"}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -13,18 +12,13 @@ data:
     leaderElection:
       leaderElect: false
     profiles:
-    - schedulerName: {{ $schedulerType }}
+    - schedulerName: {{ .Values.defaultScheduler }}
       plugins:
         queueSort:
           enabled:
             - name: Coscheduling
           disabled:
             - name: "*"
-        {{- if eq $schedulerType "preemption"}}
-        preFilter:
-          enabled:
-            - name: Coscheduling
-        {{- end }}
         permit:
           enabled:
             - name: Coscheduling
