--- a/helm/charts/determined/templates/scheduler-permissions.yaml
+++ b/helm/charts/determined/templates/scheduler-permissions.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.defaultScheduler}}
 {{- $schedulerType := .Values.defaultScheduler | trim}}
-{{- if or (eq $schedulerType "coscheduler") (eq $schedulerType "preemption")}}
+{{- if (eq $schedulerType "coscheduler") }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
