--- a/helm/charts/determined/values.yaml
+++ b/helm/charts/determined/values.yaml
@@ -347,9 +347,8 @@ telemetry:
       # certificate: <certificate contents>
 
 ## Configure the default Determined scheduler
-## Currently supports "coscheduler" for gang scheduling and "preemption" for priority based
-## scheduling with preemption
-# defaultScheduler: preemption
+## Currently supports "coscheduler" for gang scheduling.
+# defaultScheduler: coscheduler
 
 ## Configure the resource pools in the Determined cluster.
 resourcePools:
