feat: make groups scope optional to support azure with OIDC

--- a/helm/charts/determined/templates/master-config.yaml
+++ b/helm/charts/determined/templates/master-config.yaml
@@ -122,6 +122,9 @@ stringData:
       {{- if .Values.oidc.alwaysRedirect }}
       always_redirect: {{ .Values.oidc.alwaysRedirect }}
       {{- end }}
+      {{- if .Values.oidc.isGroupsSupported }}
+      is_groups_supported: {{ .Values.oidc.isGroupsSupported }}
+      {{- end }}
     {{- end }}
 
     {{- if .Values.scim }}
