--- a/helm/charts/determined/values.yaml
+++ b/helm/charts/determined/values.yaml
@@ -363,7 +363,7 @@ resourcePools:
 #   - resource_manager:
 #       type: kubernetes
 #       max_slots_per_pod: 1
-#       name: carolina-multirm-1
+#       cluster_name: carolina-multirm-1
 #       default_namespace: default
 #       kubeconfig_secret_name: additionalrm
 #       kubeconfig_secret_value: config
