Output version string in .circleci/config.yaml.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,6 +104,7 @@ jobs:
           name: Set det-version parameter.
           command: |
             VERSION=$(./version.sh)
+            echo "Version is: [${VERSION}]"
             jq --arg version "${VERSION}" '. += {"det-version": $version}' < "<<pipeline.parameters.params_basename>>" > tmpfile
             mv -v tmpfile "<<pipeline.parameters.params_basename>>"
             cat "<<pipeline.parameters.params_basename>>"
