* We need det-version, apparently, so use the empty string, "", as the   default. Hopefully, if this value is ever (erroneously) used, it will   cause enough errors that it will be obvious what the solution is.

--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -19,6 +19,9 @@ executors:
       - image: python:3.9-slim-bookworm
 
 parameters:
+  det-version:
+    type: string
+    default: ""
   docker-image:
     type: string
     default: determinedai/cimg-base:latest
