--- a/webui/react/package.json
+++ b/webui/react/package.json
@@ -46,6 +46,7 @@
     "fp-ts": "^2.16.5",
     "fuse.js": "^7.0.0",
     "hermes-parallel-coordinates": "^0.6.17",
+    "playwright-page-model-base": "npm:@hpe.com/playwright-page-model-base@^0.1.1",
     "hew": "npm:@hpe.com/hew@^0.6.39",
     "humanize-duration": "^3.28.0",
     "immutable": "^4.3.0",
