patch: make groups scope optional to support azure with OIDC (#9773)

--- a/helm/charts/determined/templates/master-config.yaml
+++ b/helm/charts/determined/templates/master-config.yaml
@@ -119,6 +119,12 @@ stringData:
       {{- if .Values.oidc.displayNameAttributeName }}
       display_name_attribute_name: {{ .Values.oidc.displayNameAttributeName }}
       {{- end }}
+      {{- if .Values.oidc.alwaysRedirect }}
+      always_redirect: {{ .Values.oidc.alwaysRedirect }}
+      {{- end }}
+      {{- if .Values.oidc.excludeGroupsScope }}
+      exclude_groups_scope: {{ .Values.oidc.excludeGroupsScope }}
+      {{- end }}
     {{- end }}
 
     {{- if .Values.scim }}
@@ -149,6 +155,9 @@ stringData:
       {{- if .Values.saml.displayNameAttributeName }}
       display_name_attribute_name: {{ .Values.saml.displayNameAttributeName }}
       {{- end }}
+      {{- if .Values.saml.alwaysRedirect }}
+      always_redirect: {{ .Values.saml.alwaysRedirect }}
+      {{- end }}
     {{- end }}
     {{- end }}
 
@@ -169,7 +178,9 @@ stringData:
 
     resource_manager:
       type: "kubernetes"
-      namespace: {{ .Release.Namespace }}
+      {{- if .Values.defaultNamespace }}
+      default_namespace: {{ .Values.defaultNamespace }}
+      {{- end }}
       max_slots_per_pod: {{ required "A valid Values.maxSlotsPerPod entry is required!" .Values.maxSlotsPerPod }}
       master_service_name: determined-master-service-{{ .Release.Name }}
       {{- if .Values.defaultScheduler}}
