--- a/helm/charts/determined/values.yaml
+++ b/helm/charts/determined/values.yaml
@@ -31,8 +31,8 @@ defaultImages:
   kubeSchedulerPreemption: "determinedai/kube-scheduler:0.17.0"
 
   # default images for CPU and GPU environments
-  cpuImage: "determinedai/pytorch-ngc:0.34.0"
-  gpuImage: "determinedai/pytorch-ngc:0.34.0"
+  cpuImage: "determinedai/pytorch-ngc-dev:5432424"
+  gpuImage: "determinedai/pytorch-ngc-dev:5432424"
 
 # Install Determined enterprise edition.
 enterpriseEdition: false
@@ -75,6 +75,11 @@ createNonNamespacedObjects: true
 # outside the cluster. NodePort service is recommended when configuring TLS termination in a
 # load-balancer.
 useNodePortForMaster: false
+
+# Allow specifying annotations that will be put on the master service.
+# masterService:
+  # annotations:
+  #   a: b
 
 # Enable route support for Openshift by setting enabled to true. Configure tls termination (i.e edge) if needed.
 # openshiftRoute:
@@ -119,6 +124,8 @@ useNodePortForMaster: false
 #   autoProvisionUsers:
 #   groupsAttributeName:
 #   displayNameAttributeName:
+#   alwaysRedirect:
+#   excludeGroupsScope:
 
 # scim (EE-only) enables System for Cross-domain Identity Management (SCIM) integration, which is
 # only available if enterpriseEdition is true. It allows administrators to easily and securely
@@ -143,6 +150,7 @@ useNodePortForMaster: false
 #   autoProvisionUsers:
 #   groupsAttributeName:
 #   displayNameAttributeName:
+#   alwaysRedirect:
 
 # db sets the configurations for the database.
 db:
@@ -357,7 +365,7 @@ resourcePools:
 #       type: kubernetes
 #       max_slots_per_pod: 1
 #       name: carolina-multirm-1
-#       namespace: default
+#       default_namespace: default
 #       kubeconfig_secret_name: additionalrm
 #       kubeconfig_secret_value: config
 #       determined_master_ip: 10.11.12.13
@@ -371,3 +379,6 @@ resourcePools:
   # logRetentionDays: 7
   # Schedule for cleaning up logs. This also accepts a cron expression. For example to run retention every Sunday at 2 am, use "0 2 * * 0"
   # schedule: "24h"
+
+# The default namespace to be referenced by each resource manager.
+# defaultNamespace:
