build: INFENG-780: Remove CircleCI bumpversion (#9785)
* Remove bump2version ("bumpversion", colloquially) dependency, both
  literally from requirements.txt and also the last remaining reference
  in its config file, .bumpversion.cfg, along with the config file
  itself. The remaining reference was in .circleci/real_config.yml.
  Removing it, though, was somewhat tricky, and had a few knock-on
  effects that had to be solved.

  The version string itself was a default for the pipeline parameter
  det-version, which is threaded through the entirety of the build
  process as a source of truth for the Determined version
  information. Instead of updating the CircleCI config itself, we can
  dynamically generate it in .circleci/config.yml and set the parameter
  there. There's still some work left to do to get tag builds working
  correctly, but for now, I call version.sh to set det-version, which
  should work correctly for all branch builds, by returning the local
  version string, e.g. 0.34.0+2e616a3d7

* Update version.sh to fix a small bug that caused git tags with
  subsequent 'v's in them, e.g. v1.0.3-dev0, to be munged incorrectly
  into 1.0.3-de0. Now, we use ${parameter#word} shell expansion to
  remove the first singular 'v' from tags.

* Update two direct invocations of setup.py in CircleCI to instead use
  the build module. Invoking setup.py directly is deprecated.

* Update the agent creation code to URL-escape the query parameter
  that's used to set the agent version. Under the new versioning scheme,
  local build versions use a short SHA after a plus + for uniqueness,
  and the plus sign was being interpreted as being part of a URL, where
  it was then turned into a space. This broke tests that attempt to
  fetch the agent version (it's also just plain incorrect). Now, the
  version string is properly escaped, and the proper agent version is
  returned.

* Update how setup.py and the determined (harness/) Python package
  manage versions. I kept runnin

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,6 +87,15 @@ jobs:
               mv -v tmpfile "<<pipeline.parameters.params_basename>>"
             fi
 
+      - run:
+          name: Set det-version parameter.
+          command: |
+            VERSION=$(./version.sh)
+            echo "Version is: [${VERSION}]"
+            jq --arg version "${VERSION}" '. += {"det-version": $version}' < "<<pipeline.parameters.params_basename>>" > tmpfile
+            mv -v tmpfile "<<pipeline.parameters.params_basename>>"
+            cat "<<pipeline.parameters.params_basename>>"
+
       # this must be last; persist the file to the workspace
       - persist_to_workspace:
           root: .
