--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -1741,7 +1741,10 @@ jobs:
       - run:
           name: Build and publish model_hub docker images
           command: |
-            if [ ${CIRCLE_BRANCH} = 'main' ] || [[ ${CIRCLE_BRANCH} == *"release-"* ]]; then
+            # Match on either "main", or any branch beginning with
+            # "release-". Note: because of Bash quoting rules, the start-of-line
+            # caret in our regex must be outside of the quotes.
+            if [[ ${CIRCLE_BRANCH} == "main" ]] || [[ ${CIRCLE_BRANCH} =~ ^"release-" ]]; then
                 # For main and release branches, we will tag and publish both the environment
                 # with the git hash as well as the version.  This will make that image available
                 # immediately for nightly tests.
@@ -1785,7 +1788,10 @@ jobs:
       - run:
           name: Build and publish model_hub docker images
           command: |
-            if [ ${CIRCLE_BRANCH} = 'main' ] || [[ ${CIRCLE_BRANCH} == *"release-"* ]]; then
+            # Match on either "main", or any branch beginning with
+            # "release-". Note: because of Bash quoting rules, the start-of-line
+            # caret in our regex must be outside of the quotes.
+            if [[ ${CIRCLE_BRANCH} == "main" ]] || [[ ${CIRCLE_BRANCH} =~ ^"release-" ]]; then
                 # For main and release branches, we will tag and publish both the environment
                 # with the git hash as well as the version.  This will make that image available
                 # immediately for nightly tests.
