chore: change the comment for defaultNamespace in values.yaml (#9793)

--- a/helm/charts/determined/templates/master-config.yaml
+++ b/helm/charts/determined/templates/master-config.yaml
@@ -178,8 +178,8 @@ stringData:
 
     resource_manager:
       type: "kubernetes"
-      {{- if .Values.resourceManager.defaultNamespace }}
-      default_namespace: {{ .Values.resourceManager.defaultNamespace }}
+      {{- if $defaultNamespace := coalesce .Values.resourceManager.defaultNamespace .Release.Namespace }}
+      default_namespace: {{ quote $defaultNamespace }}
       {{- end }}
       {{- if .Values.resourceManager.clusterName }}
       cluster_name: {{ .Values.resourceManager.clusterName }}
