--- a/e2e_tests/Makefile
+++ b/e2e_tests/Makefile
@@ -15,7 +15,7 @@ check:
 		-s ./tests/fixtures/pytorch_amp/data.py
 	black . --check
 	python -m flake8
-	mypy --exclude fixtures tests
+	mypy tests
 
 test:
 	pytest -vv -s --durations=0 tests
