--- a/e2e_tests/mypy.ini
+++ b/e2e_tests/mypy.ini
@@ -17,9 +17,15 @@ warn_redundant_casts = True
 warn_return_any = True
 warn_unused_configs = True
 warn_unused_ignores = True
+exclude = fixtures
 
 [mypy-azure.storage.blob.*]
 ; starting in azure 12.9.0:
 ; site-packages/azure/storage/blob/_serialize.py:129: error: Type signature has too many arguments
 ; site-packages/azure/storage/blob/_blob_client.py:1406: error: Type signature has too few arguments
+follow_imports = skip
+
+[mypy-torch.*]
+; starting in torch 2.2.0
+; site-packages/torch/distributed/optim/apply_optimizer_in_backward.py: : note: please use --show-traceback to print a traceback when reporting a bug
 follow_imports = skip
