--- a/e2e_tests/mypy.ini
+++ b/e2e_tests/mypy.ini
@@ -27,5 +27,5 @@ follow_imports = skip
 
 [mypy-torch.*]
 ; starting in torch 2.2.0
-; site-packages/torch/distributed/optim/apply_optimizer_in_backward.py: : note: please use --show-traceback to print a traceback when reporting a bug
+; /tmp/venv/lib/python3.8/site-packages/torch/distributed/optim/apply_optimizer_in_backward.py: error: INTERNAL ERROR
 follow_imports = skip
