* Update all relevant CircleCI tag filters to begin with a literal 'v'.
* Update all relevant CircleCI branch filters with a temporary
  branch-only specifier for this branch, INFENG-809-circleci-tag, to
  test on this feature branch without merging.

* Update CircleCI release-and-rc-filters filter tag regex to consolidate
  release and rc tag regexes into a singular regex.

* Update CircleCI rc-filters filter tag regex to remove dash between
  patch version number and the rc part.

* Update CircleCI release-filters filter tag regex to remove some
  parentheses.

--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -64,28 +64,39 @@ parameters:
 
 release-and-rc-filters: &release-and-rc-filters
   branches:
+    only:
+      # Temporary branch name for testing without merging.
+      # TODO(davidfluck-hpe): remove.
+      - /INFENG-809-circleci-tag/
     ignore:
       - /.*/
   tags:
     only:
-      - /(\d)+(\.(\d)+)+/
-      - /((\d)+(\.(\d)+)+)(-rc)(\d)+/
+      - /v\d+\.\d+\.\d+(rc\d+)?/
 
 rc-filters: &rc-filters
   branches:
+    only:
+      # Temporary branch name for testing without merging.
+      # TODO(davidfluck-hpe): remove.
+      - /INFENG-809-circleci-tag/
     ignore:
       - /.*/
   tags:
     only:
-      - /((\d)+(\.(\d)+)+)(-rc)(\d)+/
+      - /v\d+\.\d+\.\d+rc\d+/
 
 release-filters: &release-filters
   branches:
+    only:
+      # Temporary branch name for testing without merging.
+      # TODO(davidfluck-hpe): remove.
+      - /INFENG-809-circleci-tag/
     ignore:
       - /.*/
   tags:
     only:
-      - /(\d)+(\.(\d)+)+/
+      - /v\d+\.\d+\.\d+/
 
 upstream-feature-branch: &upstream-feature-branch
   branches:
