remove preemption image

--- a/helm/charts/determined/templates/scheduler-deployment.yaml
+++ b/helm/charts/determined/templates/scheduler-deployment.yaml
@@ -1,6 +1,7 @@
 {{- if .Values.defaultScheduler}}
 {{- $schedulerType := .Values.defaultScheduler | trim}}
-{{- if (eq $schedulerType "coscheduler") }}apiVersion: apps/v1
+{{- if (eq $schedulerType "coscheduler") }}
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
