--- a/e2e_tests/tests/requirements.txt
+++ b/e2e_tests/tests/requirements.txt
@@ -2,7 +2,8 @@ appdirs
 # pytest 6.0 has linter-breaking changes
 pytest>=6.0.1
 pytest-timeout
-torch==2.3.0
+torch==2.2.2; sys_platform != 'darwin' or platform_machine != 'arm64'
+torch==2.3.0; sys_platform == 'darwin' and platform_machine == 'arm64'
 torchvision==0.18.0
 tensorflow==2.12.0; sys_platform != 'darwin' or platform_machine != 'arm64'
 tensorflow-macos==2.11.0; sys_platform == 'darwin' and platform_machine == 'arm64'
