--- a/harness/tests/requirements/requirements-harness.txt
+++ b/harness/tests/requirements/requirements-harness.txt
@@ -9,7 +9,8 @@ deepspeed==0.8.3
 # lightning not tested but required for linter checks
 lightning
 transformers>=4.8.2,<4.29.0
-torch==2.3.0
+torch==2.2.2; sys_platform != 'darwin' or platform_machine != 'arm64'
+torch==2.3.0; sys_platform == 'darwin' and platform_machine == 'arm64'
 torchvision==0.18.0
 tensorflow==2.12.0; sys_platform != 'darwin' or platform_machine != 'arm64'
 tensorflow-macos==2.11.0; sys_platform == 'darwin' and platform_machine == 'arm64'
